--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,16 @@
  * @Author: xiaoping.xu
  * @Date: 2021-04-30 16:05:06
  * @LastEditors: xiaoping.xu
- * @LastEditTime: 2021-04-30 16:05:19
+ * @LastEditTime: 2021-05-03 17:34:15
  * @Desc: 
 -->
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>sds</title>
 </head>
 <body>
 <div id="app"></div>
-<script type="text/javascript" src="../dist/bundle.js" charset="utf-8"></script>
 </body>
 </html>
